<resources>
    <string name="app_name">E-Finance</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="Back">Back</string>
    <string name="next">next</string>
    <string name="Monthly">Monthly Cost</string>
    <string name="Calculate_Debt">Calculate Debt</string>
    <string name="Calculate_Interest_Rate">Calculate Interest Rate</string>
    <string name="Time_Value_of_Money">Time Value of Money</string>
    <string name="Manage_Profile">Manage Profile</string>
    <string name="riskReturn">Risk and Return</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="UpdateProfile">Update Profile</string>
    <string name="Inflation_Rate">Inflation Rate</string>
    <string name="SignUpText">No Account yet? Sign Up here!</string>
    <string name="LogInText">Already have an Account? Sign In here!</string>
    <string name="SignOut">Sign Out</string>

    <string name="re_password">Re-Enter password</string>
    <string name="interestContent">"Inflation rate can be defined as a general rise in the price of goods and service.\n\n If the annual inflation rate is 20\u0025, that means prices will on average,increase by 20\u0025 in a year.\n\n Inflation reduces the purchasing power of your money.\n\nNeedless to say, if the annual inflation rate is 0\u0025, that means price will,on average, remain the same."</string>
    <string name="interestContent2"><b>Example 1</b> : \nInflation rate = 100%\n\nToday: You have $1,000\n- A basket of goods and service cost $500.\n- You can buy 2 baskets.\n- A bank pays 100\u0025 interest.\n- Invest $1000 and get $2000 next year.\n\n\n\nAfter 1 year : You have $2,000\n- A basket of goods cost $1,000 \n- You can buy 2 baskets of goods and services! \n
</string>
</resources>
