<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.e_finance.InterestRate"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="backmain"
        android:text="Back"
        tools:text="@string/Back"
        android:layout_marginStart="29dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="29dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:onClick="gonext"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        tools:layout_constraintBaseline_creator="1"
        android:layout_marginRight="5dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="20dp"
        android:text="@string/interestContent"
        android:visibility="visible"
        tools:text="@string/interestContent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="19dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="38dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="174dp"
        android:layout_height="26dp"
        android:text="@string/interest_rate"
        android:textSize="20dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="88dp"
        app:layout_constraintRight_toRightOf="@+id/button4"
        android:layout_marginTop="27dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="88dp"
        android:layout_marginRight="88dp" />

</android.support.constraint.ConstraintLayout>
